get players biz logic
