# api/openapi_server/biz/mappers.py
@@ -1,6 +1,7 @@
 from ..models.task import Task
 from ..models.category import Category
 from ..models.player import Player
+from ..models.player_lite import PlayerLite
 
 from ..database import models
 
@@ -40,4 +41,17 @@ def map_db_player_to_player(db_player: models.Player) -> Player:
         db_player.score,
         map_db_categories_to_categories(db_player.categories),
         map_db_tasks_to_tasks(db_player.tasks)
+    )
+
+def map_db_players_to_player_lites(db_players: list[models.Player]) -> list[PlayerLite]:
+    if db_players is None:
+        return None
+    return list(map(lambda x: map_db_player_to_player_lite(x), db_players))
+
+def map_db_player_to_player_lite(db_player: models.Player) -> PlayerLite:
+    return PlayerLite(
+        db_player.id,
+        db_player.discord_id,
+        db_player.score,
+        map_db_categories_to_categories(db_player.categories)
     )
