# api/openapi_server/models/get_players200_response.py
@@ -3,10 +3,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
-from openapi_server.models.player import Player
+from openapi_server.models.player_lite import PlayerLite
 from openapi_server import util
 
-from openapi_server.models.player import Player  # noqa: E501
+from openapi_server.models.player_lite import PlayerLite  # noqa: E501
 
 class GetPlayers200Response(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -18,12 +18,12 @@ class GetPlayers200Response(Model):
         """GetPlayers200Response - a model defined in OpenAPI
 
         :param players: The players of this GetPlayers200Response.  # noqa: E501
-        :type players: List[Player]
+        :type players: List[PlayerLite]
         :param count: The count of this GetPlayers200Response.  # noqa: E501
         :type count: int
         """
         self.openapi_types = {
-            'players': List[Player],
+            'players': List[PlayerLite],
             'count': int
         }
 
@@ -47,22 +47,22 @@ class GetPlayers200Response(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def players(self) -> List[Player]:
+    def players(self) -> List[PlayerLite]:
         """Gets the players of this GetPlayers200Response.
 
 
         :return: The players of this GetPlayers200Response.
-        :rtype: List[Player]
+        :rtype: List[PlayerLite]
         """
         return self._players
 
     @players.setter
-    def players(self, players: List[Player]):
+    def players(self, players: List[PlayerLite]):
         """Sets the players of this GetPlayers200Response.
 
 
         :param players: The players of this GetPlayers200Response.
-        :type players: List[Player]
+        :type players: List[PlayerLite]
         """
         if players is None:
             raise ValueError("Invalid value for `players`, must not be `None`")  # noqa: E501
