# api/openapi_server/models/player_lite.py
@@ -8,28 +8,25 @@ from openapi_server import util
 
 from openapi_server.models.category import Category  # noqa: E501
 
-class Player(Model):
+class PlayerLite(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, tasks=None, id=None, discord_id=None, score=None, categories=None):  # noqa: E501
-        """Player - a model defined in OpenAPI
+    def __init__(self, id=None, discord_id=None, score=None, categories=None):  # noqa: E501
+        """PlayerLite - a model defined in OpenAPI
 
-        :param tasks: The tasks of this Player.  # noqa: E501
-        :type tasks: List[Category]
-        :param id: The id of this Player.  # noqa: E501
+        :param id: The id of this PlayerLite.  # noqa: E501
         :type id: str
-        :param discord_id: The discord_id of this Player.  # noqa: E501
+        :param discord_id: The discord_id of this PlayerLite.  # noqa: E501
         :type discord_id: str
-        :param score: The score of this Player.  # noqa: E501
+        :param score: The score of this PlayerLite.  # noqa: E501
         :type score: int
-        :param categories: The categories of this Player.  # noqa: E501
+        :param categories: The categories of this PlayerLite.  # noqa: E501
         :type categories: List[Category]
         """
         self.openapi_types = {
-            'tasks': List[Category],
             'id': str,
             'discord_id': str,
             'score': int,
@@ -37,69 +34,44 @@ class Player(Model):
         }
 
         self.attribute_map = {
-            'tasks': 'tasks',
             'id': 'id',
             'discord_id': 'discord_id',
             'score': 'score',
             'categories': 'categories'
         }
 
-        self._tasks = tasks
         self._id = id
         self._discord_id = discord_id
         self._score = score
         self._categories = categories
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Player':
+    def from_dict(cls, dikt) -> 'PlayerLite':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Player of this Player.  # noqa: E501
-        :rtype: Player
+        :return: The PlayerLite of this PlayerLite.  # noqa: E501
+        :rtype: PlayerLite
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def tasks(self) -> List[Category]:
-        """Gets the tasks of this Player.
-
-
-        :return: The tasks of this Player.
-        :rtype: List[Category]
-        """
-        return self._tasks
-
-    @tasks.setter
-    def tasks(self, tasks: List[Category]):
-        """Sets the tasks of this Player.
-
-
-        :param tasks: The tasks of this Player.
-        :type tasks: List[Category]
-        """
-        if tasks is None:
-            raise ValueError("Invalid value for `tasks`, must not be `None`")  # noqa: E501
-
-        self._tasks = tasks
-
-    @property
     def id(self) -> str:
-        """Gets the id of this Player.
+        """Gets the id of this PlayerLite.
 
 
-        :return: The id of this Player.
+        :return: The id of this PlayerLite.
         :rtype: str
         """
         return self._id
 
     @id.setter
     def id(self, id: str):
-        """Sets the id of this Player.
+        """Sets the id of this PlayerLite.
 
 
-        :param id: The id of this Player.
+        :param id: The id of this PlayerLite.
         :type id: str
         """
         if id is None:
@@ -109,20 +81,20 @@ class Player(Model):
 
     @property
     def discord_id(self) -> str:
-        """Gets the discord_id of this Player.
+        """Gets the discord_id of this PlayerLite.
 
 
-        :return: The discord_id of this Player.
+        :return: The discord_id of this PlayerLite.
         :rtype: str
         """
         return self._discord_id
 
     @discord_id.setter
     def discord_id(self, discord_id: str):
-        """Sets the discord_id of this Player.
+        """Sets the discord_id of this PlayerLite.
 
 
-        :param discord_id: The discord_id of this Player.
+        :param discord_id: The discord_id of this PlayerLite.
         :type discord_id: str
         """
         if discord_id is None:
@@ -132,20 +104,20 @@ class Player(Model):
 
     @property
     def score(self) -> int:
-        """Gets the score of this Player.
+        """Gets the score of this PlayerLite.
 
 
-        :return: The score of this Player.
+        :return: The score of this PlayerLite.
         :rtype: int
         """
         return self._score
 
     @score.setter
     def score(self, score: int):
-        """Sets the score of this Player.
+        """Sets the score of this PlayerLite.
 
 
-        :param score: The score of this Player.
+        :param score: The score of this PlayerLite.
         :type score: int
         """
         if score is None:
@@ -155,20 +127,20 @@ class Player(Model):
 
     @property
     def categories(self) -> List[Category]:
-        """Gets the categories of this Player.
+        """Gets the categories of this PlayerLite.
 
 
-        :return: The categories of this Player.
+        :return: The categories of this PlayerLite.
         :rtype: List[Category]
         """
         return self._categories
 
     @categories.setter
     def categories(self, categories: List[Category]):
-        """Sets the categories of this Player.
+        """Sets the categories of this PlayerLite.
 
 
-        :param categories: The categories of this Player.
+        :param categories: The categories of this PlayerLite.
         :type categories: List[Category]
         """
         if categories is None:
